@@ -1,3 +1,13 @@
+2008-11-21  Sergio Villar Senin  <svillar@iglaia.com>
+
+	* libtinymail-camel/tny-camel-default-connection-policy.c: added
+	missing license
+	* libtinymail-gnomevfs/tny-vfs-stream.c: prevent a double free of a
+	file pointer
+	* libtinymail-maemo/tny-maemo-device.c: added missing initialization
+	* libtinymailui-gtkhtml/tny-gtk-html-mime-part-view.c: added missing
+	initialization
+
 2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
  
 	Add some documentation about the behaviour of tny_folder_refresh_async()
@@ -5,10 +15,10 @@
 2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
  
 	* revert last changeset:
-	We want this to be fixed a better way
+	We want this to be fixed a better way	 
 
 2008-11-20  Martin Bonnin  <martinbonnin@gmail.com>
- 
+
 	* camel operation:
 	adding camel_operation_mute/unmute() and use it to filter the progress
 	events. This prevents to send bad progress when refreshing an IMAP folder
